--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fake api to dafiti's frontend test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [
     "dafiti",
@@ -13,7 +14,7 @@
   ],
   "author": "Guilherme Pendezza de Sousa",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "express": "^4.16.2"
   }
 }
