--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Guilherme Pendezza de Sousa",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2"
   }
 }
